CORS configuration (externalized)